# GEOF

./: .gitignore  CMakeLists.txt  README.md  test
feedforward/: CMakeLists.txt  layer.cc  layer.h  network.cc  network.h  network.json  node.cc  node.h
feedforward/historic/: network.json
navigation/: CMakeLists.txt  keyboard.cc  keyboard.h
simulator/: CMakeLists.txt  car.cc  car.h  car_test.cc  collision_test.cc  demo.cc  ff_test.cc  ff_trainer.cc  key_test.cc  lidar.cc  lidar.h  lidar_test.cc  setup.json  sim.cc  sim.h  utils.cc  utils.h  visualizer.cc  visualizer.h  visualizer_test.cc
utils/: CMakeLists.txt  vectors.cc  vectors.h  vectors_test.cc
